--- a/source/404.html
+++ b/source/404.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://i.woblog.cn" homePageName="回到我的主页"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://i.woblog.cn" homePageName="去我的主页"></script>
   
 </body>
 
